# Flask

./: .replit  LICENSE  README.md  app.py  pyproject.toml
static/: style.css
templates/: base.html  index.html  login.html
